[css] Fix title problem on small screens

--- a/css/issisp.scss
+++ b/css/issisp.scss
@@ -182,7 +182,6 @@ header {
             @include sans-serif-font;
             padding: 15px;
             font-size: 55px;
-            line-height: 20px;
             margin-bottom: 55px;
             opacity: 1;
             font-weight: 700;
@@ -231,7 +230,7 @@ header {
 
             .intro-title {
                 font-size: 90px;
-                line-height: 22px;
+
                 margin-bottom: 55px;
                 opacity: 1;
                 font-weight: 700;
